maze.lessons.maze.island.IslandMaze.scala.error
Escaper:28: error: not found: value keepHandOnSideWall
  case 1 => keepHandOnSideWall(); etat = 0;
            ^